Migrate tests to built-in HTTP client
Apache HttpClient is no longer present and was indirectly reference from odic mockserver